fix text input color and image overlap

--- a/src/styles/blocks/categories.scss
+++ b/src/styles/blocks/categories.scss
@@ -37,7 +37,7 @@
     @include page-grid;
   }
   &__img {
-    @include hover(transform, scale(1.1));
+    @include hover(transform, scale(1.05));
 
     cursor: pointer;
     width: 100%;
