--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -18,7 +18,7 @@
     height: 48px;
     border-radius: 8px;
     background-color: #f8f8fa;
-    color: #7e7e83;
+    color: $main-text-color;
     border: none;
     &:hover {
       border: 1px solid #d5d7de;
