--- a/src/styles/blocks/icons.scss
+++ b/src/styles/blocks/icons.scss
@@ -1,4 +1,5 @@
 .icon {
+  position: relative;
   display: flex;
   height: 24px;
   width: 24px;
@@ -19,6 +20,18 @@
 
   &--phone {
     background-image: url('/image/icons/phone-number.svg');
+
+    @include desktop {
+      &:hover {
+        &::before {
+          content: '+1 234 5555-55-55';
+          position: absolute;
+          left: -154px;
+          top: 4px;
+          color: $main-text-color;
+        }
+      }
+    }
   }
   &--burger {
     background-image: url('/image/icons/icon-burger-menu.svg');
