--- a/src/styles/blocks/product.scss
+++ b/src/styles/blocks/product.scss
@@ -2,7 +2,7 @@
   &__img {
     width: 100%;
 
-    @include hover(transform, scale(1.1));
+    @include hover(transform, scale(1.05));
 
     cursor: pointer;
   }
